处理混淆规则